--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div> <!-- Sidebar Menu Item -->
 
                 <div class="sidebar__menu__item">
-                    <img src="./img/" alt="">
+                    <img src="https://t.scdn.co/images/3099b3803ad9496896c43f22fe9be8c4.png" alt="">
                     <span>Músicas Curtidas</span>
                 </div> <!-- Sidebar Menu Item -->
 
@@ -121,7 +121,7 @@
                     <p>Os maiores hits do Matuê.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Dia Azul" data-file="assets/music.mp3">
                     <img src="./img/teto.jpg" alt="">
                     <h3>Teto</h3>
                     <p>Os maiores hits do Teto.</p>
@@ -138,7 +138,7 @@
             <div class="main__row">
                 <div class="main__row__title"><h2>Descubra algo novo para você</h2></div>
 
-                <div class="main__col" data-image="img/costa_gold.jpg" data-artist="Costa Gold" data-song="O Pai tá On" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/vampiro.jpg" data-artist="30PRAUM" data-song="VAMpiro" data-file="assets/music.mp3">
                     <img src="./img/descobertas da semana.PNG" alt="">
                     <h3>Descobertas da Semana</h3>
                     <p>Seu mixtape semanal.</p>
@@ -147,31 +147,31 @@
                 <div class="main__col" data-image="img/ricobemnovin.jpg" data-artist="UCLÃ" data-song="Rico e Bem Novin" data-file="assets/music.mp3">
                     <img src="./img/ricobemnovin.jpg" alt="">
                     <h3>Rico e Bem Novin</h3>
-                    <p>Lançamento UCLÃ, com Kelvinho, Sueth e Shoy</p>
+                    <p>Lançamento UCLÃ, com Kelvinho, Sueth e Shoy.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/kant.jpg" data-artist="Kant" data-song="Purgatório" data-file="assets/music.mp3">
-                    <img src="./img/kant.jpg" alt="">
-                    <h3>Kant</h3>
-                    <p>Os maiores hits do Kant.</p>
+                <div class="main__col" data-image="img/findsemananorio.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="assets/music.mp3">
+                    <img src="./img/findsemananorio.jpg" alt="">
+                    <h3>Fim de Semana no Rio</h3>
+                    <p>Música saindo do forno, à voz de Teto.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/matue.jpg" data-artist="Matuê" data-song="Máquina do Tempo" data-file="assets/music.mp3">
-                    <img src="./img/matue.jpg" alt="">
-                    <h3>Matuê</h3>
-                    <p>Os maiores hits do Matuê.</p>
+                <div class="main__col" data-image="img/playboy.png" data-artist="Krawk e Hungria" data-song="PlayBoy" data-file="assets/music.mp3">
+                    <img src="./img/playboy.png" alt="">
+                    <h3>PlayBoy</h3>
+                    <p>Lançamento de Hungria Hip Hop e Krawk.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="assets/music.mp3">
-                    <img src="./img/teto.jpg" alt="">
-                    <h3>Teto</h3>
-                    <p>Os maiores hits do Teto.</p>
+                <div class="main__col" data-image="img/insonia 2.jpg" data-artist="Tribo da Periferia" data-song="Insônia 2" data-file="assets/music.mp3">
+                    <img src="./img/insonia 2.jpg" alt="">
+                    <h3>Insônia 2</h3>
+                    <p>Tribo da Periferia, Hungria Hip Hop e MC Ryan SP.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/ucla.jpg" data-artist="UCLÃ" data-song="Gatinha" data-file="assets/music.mp3">
-                    <img src="./img/ucla.jpg" alt="">
-                    <h3>UCLÃ</h3>
-                    <p>Os maiores hits do UCLÃ.</p>
+                <div class="main__col" data-image="img/carroforte.jpg" data-artist="Mainstreet" data-song="Assault CARRO FORTE" data-file="assets/music.mp3">
+                    <img src="./img/carroforte.jpg" alt="">
+                    <h3>Assault "CARRO FORTE"</h3>
+                    <p>Borges, Orochi, Chefin, Oruam, Bielzin</p>
                 </div> <!-- Main-Col -->
 
             </div> <!-- Main-Row -->
