atualizando trabalho spotify

--- a/index.html
+++ b/index.html
@@ -56,37 +56,37 @@
             <div class="main__row">
                 <div class="main__row__title"><h2>Suas músicas estão com saudade</h2></div>
 
-                <div class="main__col" data-image="img/poesiaacustica.jpg" data-artist="Pineapple Storm Tv" data-song="Poesia Acústica 3" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/poesiaacustica.jpg" data-artist="Pineapple Storm Tv" data-song="Poesia Acústica 3" data-file="assets/poesia3.mp3">
                     <img src="./img/poesiaacustica.jpg" alt="">
                     <h3>Poesias Acústicas</h3>
                     <p>Todas as Poesias Acústicas existentes.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/thisismatue.jpg" data-artist="Matuê" data-song="É Sal" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/thisismatue.jpg" data-artist="Matuê" data-song="É Sal" data-file="assets/esal.mp3">
                     <img src="./img/thisismatue.jpg" alt="">
                     <h3>This is Matuê</h3>
                     <p>Principais músicas do artista Matuê</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/l7nnon.jpg" data-artist="L7NNON" data-song="Sorrisos (feat. Lourena)" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/l7nnon.jpg" data-artist="L7NNON" data-song="Sorrisos (feat. Lourena)" data-file="assets/sorrisos.mp3">
                     <img src="./img/l7nnon.jpg" alt="">
                     <h3>Podium L7nnon</h3>
                     <p>L7, Papato, tão na pista</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/orochi.jpg" data-artist="Orochi, Papatinho" data-song="Amor de Fim de Noite" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/orochi.jpg" data-artist="Orochi, Papatinho" data-song="Amor de Fim de Noite" data-file="assets/amordefimdenoite.mp3">
                     <img src="./img/orochi.jpg" alt="">
                     <h3>Amor de Fim de Noite</h3>
                     <p>Playlist acústica, Orochi, Xamã...</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/pineapple.jpg" data-artist="Chris, Knust, Cesar..." data-song="Você não ama ninguém" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/pineapple.jpg" data-artist="Chris, Knust, Cesar..." data-song="Você não ama ninguém" data-file="assets/vocenaoamaninguem.mp3">
                     <img src="./img/pineapple.jpg" alt="">
                     <h3>Acústico?</h3>
                     <p>Melhores acústicos de 2022.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/cesar.jpg" data-artist="César MC" data-song="Minha Última Letra" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/cesar.jpg" data-artist="César MC" data-song="Minha Última Letra" data-file="assets/minhaultimaletra.mp3">
                     <img src="./img/cesar.jpg" alt="">
                     <h3>Minha Última Letra</h3>
                     <p>As melhores do César MC</p>
@@ -97,37 +97,37 @@
             <div class="main__row">
                 <div class="main__row__title"><h2>Seus Artistas Preferidos</h2></div>
 
-                <div class="main__col" data-image="img/costa_gold.jpg" data-artist="Costa Gold" data-song="O Pai tá On" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/costa_gold.jpg" data-artist="Costa Gold" data-song="O Pai tá On" data-file="assets/opaitaon.mp3">
                     <img src="./img/costa_gold.jpg" alt="">
                     <h3>Costa Gold</h3>
                     <p>Os maiores hits do Costa Gold</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/haikaiss.jpg" data-artist="Haikaiss" data-song="Sem Graça" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/haikaiss.jpg" data-artist="Haikaiss" data-song="Sem Graça" data-file="assets/semgraça.mp3">
                     <img src="./img/haikaiss.jpg" alt="">
                     <h3>Haikaiss</h3>
                     <p>Os maiores hits do Haikaiss.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/kant.jpg" data-artist="Kant" data-song="Purgatório" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/kant.jpg" data-artist="Kant" data-song="Purgatório" data-file="">
                     <img src="./img/kant.jpg" alt="">
                     <h3>Kant</h3>
                     <p>Os maiores hits do Kant.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/matue.jpg" data-artist="Matuê" data-song="Máquina do Tempo" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/matue.jpg" data-artist="Matuê" data-song="Máquina do Tempo" data-file="">
                     <img src="./img/matue.jpg" alt="">
                     <h3>Matuê</h3>
                     <p>Os maiores hits do Matuê.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Dia Azul" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Dia Azul" data-file="">
                     <img src="./img/teto.jpg" alt="">
                     <h3>Teto</h3>
                     <p>Os maiores hits do Teto.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/ucla.jpg" data-artist="UCLÃ" data-song="Gatinha" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/ucla.jpg" data-artist="UCLÃ" data-song="Gatinha" data-file="">
                     <img src="./img/ucla.jpg" alt="">
                     <h3>UCLÃ</h3>
                     <p>Os maiores hits do UCLÃ.</p>
@@ -138,37 +138,37 @@
             <div class="main__row">
                 <div class="main__row__title"><h2>Descubra algo novo para você</h2></div>
 
-                <div class="main__col" data-image="img/vampiro.jpg" data-artist="30PRAUM" data-song="VAMpiro" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/vampiro.jpg" data-artist="30PRAUM" data-song="VAMpiro" data-file="">
                     <img src="./img/descobertas da semana.PNG" alt="">
                     <h3>Descobertas da Semana</h3>
                     <p>Seu mixtape semanal.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/ricobemnovin.jpg" data-artist="UCLÃ" data-song="Rico e Bem Novin" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/ricobemnovin.jpg" data-artist="UCLÃ" data-song="Rico e Bem Novin" data-file="">
                     <img src="./img/ricobemnovin.jpg" alt="">
                     <h3>Rico e Bem Novin</h3>
                     <p>Lançamento UCLÃ, com Kelvinho, Sueth e Shoy.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/findsemananorio.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/findsemananorio.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="">
                     <img src="./img/findsemananorio.jpg" alt="">
                     <h3>Fim de Semana no Rio</h3>
                     <p>Música saindo do forno, à voz de Teto.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/playboy.png" data-artist="Krawk e Hungria" data-song="PlayBoy" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/playboy.png" data-artist="Krawk e Hungria" data-song="PlayBoy" data-file="">
                     <img src="./img/playboy.png" alt="">
                     <h3>PlayBoy</h3>
                     <p>Lançamento de Hungria Hip Hop e Krawk.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/insonia 2.jpg" data-artist="Tribo da Periferia" data-song="Insônia 2" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/insonia 2.jpg" data-artist="Tribo da Periferia" data-song="Insônia 2" data-file="">
                     <img src="./img/insonia 2.jpg" alt="">
                     <h3>Insônia 2</h3>
                     <p>Tribo da Periferia, Hungria Hip Hop e MC Ryan SP.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/carroforte.jpg" data-artist="Mainstreet" data-song="Assault CARRO FORTE" data-file="assets/music.mp3">
+                <div class="main__col" data-image="img/carroforte.jpg" data-artist="Mainstreet" data-song="Assault CARRO FORTE" data-file="">
                     <img src="./img/carroforte.jpg" alt="">
                     <h3>Assault "CARRO FORTE"</h3>
                     <p>Borges, Orochi, Chefin, Oruam, Bielzin</p>
@@ -201,7 +201,9 @@
         </div>
     </div>
 
-    <audio id="audio player" style="position: absolute; left: 0; top: 0; z-index: -999; opacity: 0;" controls=""></audio>
+    <audio id="audioplayer" style="position: absolute; left: 0; top: 0; z-index: -999; opacity: 0;" controls="">
+        <source src=""  id="minhaMusica">
+    </audio>
 
     <script src="./js/all.min.js"></script>
     <script src="./js/js.js"></script>
