spotify com músicas tocando

--- a/index.html
+++ b/index.html
@@ -201,9 +201,8 @@
         </div>
     </div>
 
-    <audio id="audioplayer" style="position: absolute; left: 0; top: 0; z-index: -999; opacity: 0;" controls="">
-        <source src=""  id="minhaMusica">
-    </audio>
+    <div id="containerAudio" style="position: absolute; left: 0; top: 0; z-index: -999; opacity: 0; display:none" ></div>
+
 
     <script src="./js/all.min.js"></script>
     <script src="./js/js.js"></script>
