--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             </div> <!-- Sidebar Menu -->
 
             <div class="sidebar__playlists">
-                <a href="">Playlist 1</a>
-                <a href="">Playlist 1</a>
-                <a href="">Playlist 1</a>
-                <a href="">Playlist 1</a>
+                <a href="#">Playlist 1</a>
+                <a href="#">Playlist 1</a>
+                <a href="#">Playlist 1</a>
+                <a href="#">Playlist 1</a>
             </div> <!-- Sidebar Playlists -->
 
         </div> <!-- Sidebar Wrapper -->
