--- a/index.html
+++ b/index.html
@@ -176,6 +176,17 @@
 
             </div> <!-- Main-Row -->
 
+            <div class="main__row">
+                <div class="main__row__title"><h2>Músicas Suaves</h2></div>
+
+                <div class="main__col" data-image="img/major.jpg" data-artist="Major Lazer" data-song="Light it Up Remix" data-file="assets/musicasenai1.mp3">
+                    <img src="./img/major.jpg" alt="">
+                    <h3>Light it up</h3>
+                    <p>Remix de Major Lazer</p>
+                </div> <!-- Main-Col -->
+
+            </div> <!-- Main-Row -->
+
         </div> <!-- Main-Wrapper -->
 
     </div> <!-- Main -->
