código final atualizado

--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
                     <p>Os maiores hits do Haikaiss.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/kant.jpg" data-artist="Kant" data-song="Purgatório" data-file="">
+                <div class="main__col" data-image="img/kant.jpg" data-artist="Kant" data-song="Purgatório" data-file="assets/purgatorio.mp3">
                     <img src="./img/kant.jpg" alt="">
                     <h3>Kant</h3>
                     <p>Os maiores hits do Kant.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/matue.jpg" data-artist="Matuê" data-song="Máquina do Tempo" data-file="">
+                <div class="main__col" data-image="img/matue.jpg" data-artist="Matuê" data-song="Máquina do Tempo" data-file="assets/maquinadotempo.mp3">
                     <img src="./img/matue.jpg" alt="">
                     <h3>Matuê</h3>
                     <p>Os maiores hits do Matuê.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Dia Azul" data-file="">
+                <div class="main__col" data-image="img/teto.jpg" data-artist="Teto" data-song="Dia Azul" data-file="assets/diaazul.mp3">
                     <img src="./img/teto.jpg" alt="">
                     <h3>Teto</h3>
                     <p>Os maiores hits do Teto.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/ucla.jpg" data-artist="UCLÃ" data-song="Gatinha" data-file="">
+                <div class="main__col" data-image="img/ucla.jpg" data-artist="UCLÃ" data-song="Gatinha" data-file="assets/gatinha.mp3">
                     <img src="./img/ucla.jpg" alt="">
                     <h3>UCLÃ</h3>
                     <p>Os maiores hits do UCLÃ.</p>
@@ -138,51 +138,40 @@
             <div class="main__row">
                 <div class="main__row__title"><h2>Descubra algo novo para você</h2></div>
 
-                <div class="main__col" data-image="img/vampiro.jpg" data-artist="30PRAUM" data-song="VAMpiro" data-file="">
+                <div class="main__col" data-image="img/vampiro.jpg" data-artist="30PRAUM" data-song="VAMpiro" data-file="assets/vampiro.mp3">
                     <img src="./img/descobertas da semana.PNG" alt="">
                     <h3>Descobertas da Semana</h3>
                     <p>Seu mixtape semanal.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/ricobemnovin.jpg" data-artist="UCLÃ" data-song="Rico e Bem Novin" data-file="">
+                <div class="main__col" data-image="img/ricobemnovin.jpg" data-artist="UCLÃ" data-song="Rico e Bem Novin" data-file="assets/ricobemnovin.mp3">
                     <img src="./img/ricobemnovin.jpg" alt="">
                     <h3>Rico e Bem Novin</h3>
                     <p>Lançamento UCLÃ, com Kelvinho, Sueth e Shoy.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/findsemananorio.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="">
+                <div class="main__col" data-image="img/findsemananorio.jpg" data-artist="Teto" data-song="Fim de Semana no Rio" data-file="assets/fimdesemananorio.mp3">
                     <img src="./img/findsemananorio.jpg" alt="">
                     <h3>Fim de Semana no Rio</h3>
                     <p>Música saindo do forno, à voz de Teto.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/playboy.png" data-artist="Krawk e Hungria" data-song="PlayBoy" data-file="">
+                <div class="main__col" data-image="img/playboy.png" data-artist="Krawk e Hungria" data-song="PlayBoy" data-file="assets/playboy.mp3">
                     <img src="./img/playboy.png" alt="">
                     <h3>PlayBoy</h3>
                     <p>Lançamento de Hungria Hip Hop e Krawk.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/insonia 2.jpg" data-artist="Tribo da Periferia" data-song="Insônia 2" data-file="">
+                <div class="main__col" data-image="img/insonia 2.jpg" data-artist="Tribo da Periferia" data-song="Insônia 2" data-file="assets/insonia2.mp3">
                     <img src="./img/insonia 2.jpg" alt="">
                     <h3>Insônia 2</h3>
                     <p>Tribo da Periferia, Hungria Hip Hop e MC Ryan SP.</p>
                 </div> <!-- Main-Col -->
 
-                <div class="main__col" data-image="img/carroforte.jpg" data-artist="Mainstreet" data-song="Assault CARRO FORTE" data-file="">
+                <div class="main__col" data-image="img/carroforte.jpg" data-artist="Mainstreet" data-song="Assault CARRO FORTE" data-file="assets/carroforte.mp3">
                     <img src="./img/carroforte.jpg" alt="">
                     <h3>Assault "CARRO FORTE"</h3>
                     <p>Borges, Orochi, Chefin, Oruam, Bielzin</p>
-                </div> <!-- Main-Col -->
-
-            </div> <!-- Main-Row -->
-
-            <div class="main__row">
-                <div class="main__row__title"><h2>Músicas Suaves</h2></div>
-
-                <div class="main__col" data-image="img/major.jpg" data-artist="Major Lazer" data-song="Light it Up Remix" data-file="assets/musicasenai1.mp3">
-                    <img src="./img/major.jpg" alt="">
-                    <h3>Light it up</h3>
-                    <p>Remix de Major Lazer</p>
                 </div> <!-- Main-Col -->
 
             </div> <!-- Main-Row -->
